Parte 7 do projeto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -37,8 +37,11 @@
         <li>NodeJS</li>
       </ul>
       <br>
+      <nav>
+      <a id="link_externo" href="https://www.betrybe.com/" target="_blank">Site da Trybe</a>
+      </nav>
       <footer id="rodape">
-        <h4>Página criada por Márcio Fujita</h4>
+        <p>Criado por Márcio Fujita</p>
       </footer>
   </body>
 </html>
