Correção - Estilizando table e footer

--- a/index.html
+++ b/index.html
@@ -21,62 +21,52 @@
             </ul>
         </nav>
     </header>
-    <main id="conteudo">
-        <section>
-            <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Empatia</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Slack</li>
-                <li>Zoom</li>
-                <li>Inteligência Emocional</li>
-                <li>Soft Skills</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Forms</li>
-                <li>CSS Responsive</li>
-                <li>ES6</li>
-                <li>Python</li>
-                <li>Agoritmos</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>SQL</li>
-            </ul>
-            <table>
-                <tr>
-                    <th colspan="2">Conteúdo Trybe</th>
-                </tr>
-                <tr>
-                    <td>Bloco 1: Unix, Bash e Shell Script</td>
-                    <td>Bloco 2: Git, GitHub e Internet</td>
-                </tr>
-                <tr>
-                    <td>Bloco 3: Introdução à HTML e CSS</td>
-                    <td><strong>Bloco 4: Introdução à JavaScript e Lógica de Programação</strong></td>
-                </tr>
-            </table>
-        </section>
-        <section>
-            <article class="lado-esquerdo">
-                <h2>Sobre Meu Aprendizado</h2>
-                <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os
-                    conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML,
-                    é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e
-                    conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo
-                    sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
-            </article>
-            <aside class="lado-direito">
-                <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as
-                    ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades
-                    que enfrentaremos num dia-a-dia de trabalho.</p>
-            </aside>
-        </section>
+    <main  id="conteudo">
+        <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inteligência Emocional</li>
+            <li>Soft Skills</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>Python</li>
+            <li>Agoritmos</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+        <table>
+            <tr>
+                <th colspan="2">Conteúdo Trybe</th>
+            </tr>
+            <tr>
+                <td>Bloco 1: Unix, Bash e Shell Script</td>
+                <td>Bloco 2: Git, GitHub e Internet</td>
+            </tr>
+            <tr>
+                <td>Bloco 3: Introdução à HTML e CSS</td>
+                <td><strong>Bloco 4: Introdução à JavaScript e Lógica de Programação</strong></td>
+            </tr>
+        </table>
+        <article class="lado-esquerdo">
+            <h2>Sobre Meu Aprendizado</h2>
+            <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
+        </article>
+        <aside class="lado-direito">
+            <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que enfrentaremos num dia-a-dia de trabalho.</p>
+        </aside>
     </main>
     <footer id="rodape">
         <p>Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a></p>
