Adiciona rodape de acordo com o requisito 6 e linka redes sociais minhas nele

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
               <li>fhuhfud</li>
           </ul>
         </section>
+        <footer id="rodape">PROJETO DESENVOLVIDO EM 24/11/2020 POR LETÍCIA LIMA: <a href="https://github.com/letslima" target="_blank">GITHUB</a> ● <a href="https://www.linkedin.com/in/let%C3%ADcia-lima-1ba33115b/" target="_blank">LINKEDIN</a> ● <a href="https://twitter.com/letlih" target="_blank">TWITTER</a> ● <a href="https://www.instagram.com/letlih/" target="_blank">INSTAGRAM</a> ● <a href="https://www.facebook.com/chubbylima/" target="_blank">FACEBOOK</a></footer>
     </body>
 </html>
