Revisando o codigo 1. Inserindo link externo.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições Aprendidas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <div>
             <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+            <ul id="linkheader">
+                <li><a href="https://www.linkedin.com/in/jhonatan-arguello/">Linkedin</a></li>
+                <li><a href="https://github.com/jiarguello">GitHub</a></li>
+                <li><a href="https://www.betrybe.com/">Conheça a Trybe</a>
+            </ul>
+            
         </div>
     </header>
 
     <main>
-        <img src="minha_foto.png" id="minha_foto">
+        <section>
+            <img src="minha_foto.png" id="minha_foto">
 
-        <p>Olá! Tudo bem? Meu nome é Jhonatan, sou aluno da <a href="https://www.betrybe.com/">Trybe</a></p>
+            <aside>
+                <p>Estudar na Trybe <strong>NÃO É FÁCIL</strong>, mas é muito recompensador. Me lembra muito quando minha mãe vinha com o tal do mertiolate rs.</p>
+            </aside> 
+        </section>
 
         <article>
             <p>As aulas da turma 9 da Trybe começaram na segunda semana de novembro de 2020. Em apenas duas semanas já foi possível aprender muita coisa. Durante as duas primeiras semanas tivemos uma imersão na cultura da Trybe e no que seria a base do conhecimento que iríamos desenvolver nos próximos meses.</p>
             <p>Em apenas 15 dias foi possível entender e executar comandos via terminal, entender como a internet funciona, além das estruturas de página tendo bastante mão na massa principalmente para criar nossa primeira página HTML.</p>
         </article>
-
-        <section>
-            <aside>
-                <p>Estudar na Trybe não é fácil, mas é muito recompensador. Me lembra muito quando minha mãe vinha com o tal do mertiolate rs.</p>
-            </aside> 
-        </section>
 
         <ol id="licoes_aprendidas">
             <li>Unix</li>
