Resolvidos erros referentes aos requisitos 9 & 14

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <aside id="passagem_de_aprendizado">
     <section>
       <h3>A estrada até agora</h3>
-      <p>Parece que o curso começou ontem e o primeiro projeto já está <strong>PRONTO!</strong> Não foi fácil, deixamos alguns pratos caírem, mas conseguimos. Com novas <em>soft skills</em> em mente, descobrimos que juntos somos mais fortes! É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong>
+      <p>Parece que tudo começou ontem e o primeiro projeto já está <strong>PRONTO!</strong>Não foi fácil, deixamos alguns pratos caírem, mas conseguimos! Com novas <em>soft skills</em> em mente descobrimos que juntos somos mais fortes! É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong>
       </p>
     </section>
   </aside>
