--- a/index.html
+++ b/index.html
@@ -1,57 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Primeiro Site</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Primeiro Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div></div>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Login</li>
-            </ul>
-        </nav>
+        <ul>
+            <li>Home</li>
+            <li>Login</li>
+        </ul>
     </header>
     <main>
         <img id="minha_foto" src="minhaFoto.jpg" alt="minha foto de perfil">
-            <ol id="licoes_aprendidas">
-                <li>Lição 1</li>
-                <li>Lição 2</li>
-                <li>Lição 3</li>
-                <li>Lição 4</li>
-                <li>Lição 5</li>
-                <li>Lição 6</li>
-                <li>Lição 7</li>
-                <li>Lição 8</li>
-                <li>Lição 9</li>
-                <li>Lição 10</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <li>Lição 1</li>
-                <li>Lição 2</li>
-                <li>Lição 3</li>
-                <li>Lição 4</li>
-                <li>Lição 5</li>
-                <li>Lição 6</li>
-                <li>Lição 7</li>
-                <li>Lição 8</li>
-                <li>Lição 9</li>
-                <li>Lição 10</li>
-            </ul>
+        <ol id="licoes_aprendidas">
+            <li>Lição 1</li>
+            <li>Lição 2</li>
+            <li>Lição 3</li>
+            <li>Lição 4</li>
+            <li>Lição 5</li>
+            <li>Lição 6</li>
+            <li>Lição 7</li>
+            <li>Lição 8</li>
+            <li>Lição 9</li>
+            <li>Lição 10</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>Lição 1</li>
+            <li>Lição 2</li>
+            <li>Lição 3</li>
+            <li>Lição 4</li>
+            <li>Lição 5</li>
+            <li>Lição 6</li>
+            <li>Lição 7</li>
+            <li>Lição 8</li>
+            <li>Lição 9</li>
+            <li>Lição 10</li>
+        </ul>
         <article>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, mollitia nostrum velit culpa vitae reprehenderit amet laudantium reiciendis rerum voluptates corrupti illo, sunt pariatur dicta obcaecati error quis expedita. Illum.</p>
         </article>
         <aside>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, numquam sit ea, quis quo, vel pariatur ducimus a eaque quaerat quibusdam totam. Accusamus beatae, dolore in facere est quae illum!</p>
         </aside>
-
+        <table>
+            <tr>
+                <th>Coluna 1</th>
+                <th>Coluna 2</th>
+            </tr>
+            <tr>
+                <td>celula 1</td>
+                <td>celula 2</td>
+            </tr>
+        </table>
     </main>
     <footer id="rodape">
-        <a href="https://www.google.com" target="_blank">Google</a>
+        <nav>
+            <a href="https://www.google.com" target="_blank">Google</a>
+        </nav>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum accusamus illo optio in sequi debitis dicta labore, molestias dolorum corrupti nostrum placeat enim consectetur ut pariatur sapiente, consequuntur deserunt corporis!</p>
+        </section>
     </footer>
 </body>
 </html>
