--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h1 id="titulo">LESSONS LEARNED</h1>
         <nav id="navegacao">
             <ul class="listas">
-                <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
+                <li><a href="https://www.linkedin.com/in/mendoncag/" target="_blank"><img class="links_logos"
                             alt="logo do linkedin"
                             src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
                 </li>
                 <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"
-                        target="_Blank"><img class="links_logos" alt="logo do gmail"
+                        target="_blank"><img class="links_logos" alt="logo do gmail"
                             src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
                 </li>
             </ul>
@@ -75,9 +75,9 @@
         </aside>
     </main>
     <footer id="rodape">
-        <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos" alt="logo do linkedin"
+        <a href="https://www.linkedin.com/in/mendoncag/" target="_blank"><img class="links_logos" alt="logo do linkedin"
                 src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
-        <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos" alt="logo do github"
+        <a href="https://github.com/gabrielgarciamendonca" target="_blank"><img class="links_logos" alt="logo do github"
                 src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
     </footer>
 </body>
