--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
                 Lições aprendidas - Trybe!
             </h1>
             <nav>
-                <ul>
-                    <button><li><a href="#">Home</a></li></button>
-                    <button><li><a href="#">Arquivos</a></li></button>
-                </ul>
+            <ul>
+                <button><li><a href="#">Home</a></li></button>
+                <button><li><a href="#">Arquivos</a></li></button>
+            </ul>
             </nav>
         </header>
         <main>
+            <img id="minha_foto" src="brenno-calado.jpg" alt="foto do autor">
             <section>
-                    <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
-                    <h3>Lições aprendidas</h3>
+                <section>
+                    <h2>Lições aprendidas</h2>
                     <ol id="licoes_aprendidas">
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
@@ -33,9 +34,11 @@
                     <li>Colocar vários emojis no texto vai deixar o leitor de tela maluco! 😅 </li>
                     <li>Se o CSS te deixar perdido, o <code>display: flex</code> está ai para te ajudar</li>
                     <li>Tá perdido? Não guarde as dúvidas para você!</li>
-                </ol>
-                <h3>Lições a aprender</h3>
-                <ul id="licoes_a_aprender">
+                    </ol>
+                </section>
+                <section>
+                    <h2>Lições a aprender</h2>
+                    <ul id="licoes_a_aprender">
                     <li>soft-skills</li>
                     <li>Linguagem de Programação</li>
                     <li>VSCode Finger's Economy na University of Oliva</li>
@@ -46,14 +49,15 @@
                     <li>Estruturar bem o layout com CSS na disciplina finger's economy</li>
                     <li>Don't Give Up... Just... <span>Do it!</span></li>
                     <li>Aprender a aprender</li>
-                </ul>
+                    </ul>
+                </section>
             </section>
             <section>
-                <article>
+                <article class="article">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
                 </article>
-                <aside>
+                <aside class="aside">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit quam libero quasi voluptatibus cupiditate eligendi quibusdam harum! Error eveniet perferendis et cumque aliquid facere necessitatibus nisi fuga ad, quaerat nam.
                 </aside>
             </section>
