--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-        <title>Lessons Learned - Projeto</title>
-    </head>
-    <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lessons Learned</h1>
-            <nav id="nav-link">
-                <p>
-                    <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
-                </p>
-            </nav>
-        </header>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Lessons Learned - Projeto</title>
+</head>
+
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned</h1>
+        <nav id="nav-link">
+            <p>
+                <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
+            </p>
+        </nav>
+    </header>
+    <main id="conteudo">
         <section>
             <img src="perfil.jpg" id="minha_foto" alt="Minha foto">
             <table id="table">
@@ -62,24 +65,37 @@
                 <li>Soft Skills</li>
             </ul>
         </section>
-        <h2>Trajetória - A New Hope</h2>
-        <article>
-            <p>
-                
-            </p>
-        </article>
-        <aside>
-            <p>
-                <span class="highlight-word">FUN FACT:</span><br>
-                Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
-                Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
-                que às pressas fazer outro pendrive com Ubuntu e formatar
-                o notebook nesse meio tempo. Pensa na adrenalina...    
-            </p>
-        </aside>
-        <footer id="rodape">
-            <em>Webiste desenvolvido por <span class="highlight-word">Gabriel Galdino</span>.
-                Todos os direitos reservados <span class="highlight-word">©</span>.</em>
-        </footer>
-    </body>
+        <h2>Trajetória - <em>A New Hope</em></h2>
+        <section>
+            <article>
+                <p>
+                    <span id="sw"><em>Numa galáxia não muito distante...</em></span><br><br>
+                    Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
+                    me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
+                    Eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois
+                    eles te deixam com a sensação de que você é capaz de tudo! <br><br>
+                    Desde como usar o Terminal do Linux até o ponto que estamos, a TRYBE tem dado
+                    uma experiência incrível. <br>
+                    Tamo junto galera! <strong>#VQV</strong>
+                </p>
+            </article>
+        </section>
+        <section>
+            <aside>
+                <p>
+                    <span class="highlight-word">FUN FACT:</span><br>
+                    Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
+                    Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
+                    que às pressas fazer outro pendrive com Ubuntu e formatar
+                    o notebook nesse meio tempo. Pensa na adrenalina...
+                </p>
+            </aside>
+        </section>
+    </main>
+    <footer id="rodape">
+        <em>Webiste desenvolvido por <span class="highlight-word">Gabriel Galdino</span>.
+            Todos os direitos reservados <span class="highlight-word">©</span>.</em>
+    </footer>
+</body>
+
 </html>
