--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                 <h1> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
             </section>
             <section>
-                <table id="table-info">
+                <table>
                     <tr>
-                        <th>Nome</th>
-                        <th>Marcelo Campos</th>
+                        <td>Nome</td>
+                        <td>Marcelo Campos</td>
                     </tr>
                     <tr>
-                        <th>Idade</th>
-                        <th>28 anos</th>
+                        <td>Idade</td>
+                        <td>28 anos</td>
                     </tr>
                     <tr>
-                        <th>Turma</th>
-                        <th>09</th>
+                        <td>Turma</td>
+                        <td>09</td>
                     </tr>
                 </table>
             </section>
