Adiciona novas estilizações

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <section id="aprendizados">
-      <h2 id="licoes">Lições</h2>
+      <h2 class="licoes">Lições aprendidas</h2>
         <ol class="lado-esquerdo" id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
@@ -34,6 +34,8 @@
           <li>CSS</li>
           <li>HTML Semântico</li>
         </ol>
+
+      <h2 class="licoes">Lições a aprender</h2>
         <ul class="lado-direito" id="licoes_a_aprender">
           <li>JavaScript</li>
           <li>React</li>
@@ -48,13 +50,26 @@
         </ul>
     </section>
 
-    <article id="artigo">
-      <p class="lado-esquerdo">Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
+    <article class="lado-esquerdo" id="artigo">
+      <p>Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
     </article>
 
     <aside class="lado-direito" id="aside">
-      <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos (Unix, Bash e Shell Script; Git, GitHub e Internet; Introdução a HTML e CSS).</p>
+      <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos.</p>
     </aside>
+
+    <table>
+      <tr>
+        <th>Bloco 1</th>
+        <td>Unix, Bash e Shell Script</td>
+      </tr>
+      <tr>
+        <th>Bloco 2</th>
+        <td>Git, GitHub e Internet</td>
+      </tr>
+      <th>Bloco 3</th>
+      <td>Introdução a HTML e CSS</td>
+    </table>
 
     <footer id="rodape">
       <p>Projeto desenvolvido por Fernanda Cajueiro durante o curso de desenvolvimento de software na Trybe, em novembro de 2020. Todos os direitos reservados.</p>
