--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section id="apresentacao">
       <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
-      <h3 id="nome">Fernanda Cajueiro Machado</h3>
+      <p id="nome">Fernanda Cajueiro Machado</p>
       <p id="links"><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p>
     </section>
 
