--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>LESSONS LEARNED PROJECT - LETSLIMA</title>
     </head>
     <body>
-      <div id="cabecalho">
+      <section id="cabecalho">
         <h1 id="titulo">Lições Aprendidas na <a href="https://app.betrybe.com/course/fundamentals/unix/unix-part-1" target="_blank"><img id="trybe_logo" src="trybe.png" alt="imagem da logotipo da Trybe"></a></h1>
-      </div>
+      </section>
       <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
         <section>
           <ol id="licoes_aprendidas">
@@ -36,6 +36,11 @@
               <li>fhuhfud</li>
           </ul>
         </section>
-        <footer id="rodape">PROJETO DESENVOLVIDO EM 24/11/2020 POR LETÍCIA LIMA: <a href="https://github.com/letslima" target="_blank">GITHUB</a> ● <a href="https://www.linkedin.com/in/let%C3%ADcia-lima-1ba33115b/" target="_blank">LINKEDIN</a> ● <a href="https://twitter.com/letlih" target="_blank">TWITTER</a> ● <a href="https://www.instagram.com/letlih/" target="_blank">INSTAGRAM</a> ● <a href="https://www.facebook.com/chubbylima/" target="_blank">FACEBOOK</a></footer>
+            <h2 id="aprendizado"><article>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur facilisis congue augue ac tempus. Nunc pulvinar, nisi tempor semper sollicitudin, est enim sodales ex, et mattis nisi odio in erat. Aliquam malesuada ante vel enim porta accumsan. Cras rutrum eleifend nisl, laoreet faucibus diam laoreet at. Cras rutrum placerat elit, eget pretium risus imperdiet ut. Proin egestas ex at ipsum nulla.
+            </article></h2>
+            <section>
+                <footer id="rodape">PROJETO DESENVOLVIDO EM 24/11/2020 POR LETÍCIA LIMA: <a href="https://github.com/letslima" target="_blank">GITHUB</a> ● <a href="https://www.linkedin.com/in/let%C3%ADcia-lima-1ba33115b/" target="_blank">LINKEDIN</a> ● <a href="https://twitter.com/letlih" target="_blank">TWITTER</a> ● <a href="https://www.instagram.com/letlih/" target="_blank">INSTAGRAM</a> ● <a href="https://www.facebook.com/chubbylima/" target="_blank">FACEBOOK</a></footer>
+            </section>
     </body>
 </html>
