reorganizaçao do codigo

--- a/index.html
+++ b/index.html
@@ -17,35 +17,37 @@
     </header>
     <main>
         <img id="minha_foto" src="minhaFoto.jpg" alt="minha foto de perfil">
-        <ol id="licoes_aprendidas">
-            <li>Lição 1</li>
-            <li>Lição 2</li>
-            <li>Lição 3</li>
-            <li>Lição 4</li>
-            <li>Lição 5</li>
-            <li>Lição 6</li>
-            <li>Lição 7</li>
-            <li>Lição 8</li>
-            <li>Lição 9</li>
-            <li>Lição 10</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>Lição 1</li>
-            <li>Lição 2</li>
-            <li>Lição 3</li>
-            <li>Lição 4</li>
-            <li>Lição 5</li>
-            <li>Lição 6</li>
-            <li>Lição 7</li>
-            <li>Lição 8</li>
-            <li>Lição 9</li>
-            <li>Lição 10</li>
-        </ul>
+        <div style="float: left;">
+            <ol id="licoes_aprendidas">
+                <li>Lição 1</li>
+                <li>Lição 2</li>
+                <li>Lição 3</li>
+                <li>Lição 4</li>
+                <li>Lição 5</li>
+                <li>Lição 6</li>
+                <li>Lição 7</li>
+                <li>Lição 8</li>
+                <li>Lição 9</li>
+                <li>Lição 10</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>Lição 1</li>
+                <li>Lição 2</li>
+                <li>Lição 3</li>
+                <li>Lição 4</li>
+                <li>Lição 5</li>
+                <li>Lição 6</li>
+                <li>Lição 7</li>
+                <li>Lição 8</li>
+                <li>Lição 9</li>
+                <li>Lição 10</li>
+            </ul>
+        </div>
         <article>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, mollitia nostrum velit culpa vitae reprehenderit amet laudantium reiciendis rerum voluptates corrupti illo, sunt pariatur dicta obcaecati error quis expedita. Illum.</p>
+            <p>This user has not shared any posts. Share posts and earn karma by helping other developers learn to code.This user has not shared any posts. Share posts and earn karma by helping other developers learn to code.This user has not shared any posts. Share posts and earn karma by helping other developers learn to code.</p>
         </article>
         <aside>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, numquam sit ea, quis quo, vel pariatur ducimus a eaque quaerat quibusdam totam. Accusamus beatae, dolore in facere est quae illum!</p>
+            <p>This user has not shared any posts. Share posts and earn karma by helping other developers learn to code.This user has not shared any posts. Share posts and earn karma by helping other developers learn to code.</p>
         </aside>
         <table>
             <tr>
