--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
     </section>
     <section id="section_article">
         <h2>Artigos</h2>
-        <article class="lado-esquerdo">
-            <h3>Artigo Esquerdo</h3>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consequat massa. Duis ultrices in tortor ac laoreet. Maecenas quis sapien felis. Donec erat ligula, sollicitudin tristique ipsum sit amet, interdum mollis augue. Duis ac lectus in velit pretium lobortis sit amet ac lectus. Aliquam erat volutpat. Praesent quis nisi a urna blandit placerat. Cras fringilla lacus a ante vehicula auctor. Maecenas porta lobortis nunc pretium pulvinar. Maecenas in laoreet risus. Duis sit amet mauris.
-        </article>
+        <article class="lado-esquerdo"><h3>Artigo Esquerdo</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut consequat massa. Duis ultrices in tortor ac laoreet. Maecenas quis sapien felis. Donec erat ligula, sollicitudin tristique ipsum sit amet, interdum mollis augue. Duis ac lectus in velit pretium lobortis sit amet ac lectus. Aliquam erat volutpat. Praesent quis nisi a urna blandit placerat. Cras fringilla lacus a ante vehicula auctor. Maecenas porta lobortis nunc pretium pulvinar. Maecenas in laoreet risus. Duis sit amet mauris.</article>
         <article class="lado-direito">
             <h3>Artigo Direito</h3>
             <aside> <h4>Aside</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut tortor scelerisque, facilisis nibh in, ornare enim. Morbi suscipit orci non mattis feugiat. Pellentesque eget orci gravida laoreet.</aside>
