--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       </main>
       <footer id="rodape">
           <nav>
-              <li><a href="https://www.linkedin.com/in/raphaelmlrego/">Likedin de Raphael</a></li>
-              <li><a href="https://github.com/regoraphael">GitHub de Raphael</a></li>
+              <li><a href="https://www.linkedin.com/in/raphaelmlrego/" target="_blanc">Likedin de Raphael</a></li>
+              <li><a href="https://github.com/regoraphael" target="_blanc">GitHub de Raphael</a></li>
           </nav>
       </footer>
       
