--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
         <h1 id="titulo">Aprendizados em 2 semanas de Trybe</h1>
     </header>
     <img id="minha_foto" src="foto_carol_bitencourt.jpg" alt="Foto da Carol Bitencourt.">
-
+<ol id="licoes_aprendidas">
+    <li>
+        Autoconhecimento
+    </li>
+    <li>
+        Empatia
+    </li>
+    <li>
+        Inteligência emocional
+    </li>
+    <li>
+        Unix
+    </li>
+    <li>
+        Bash
+    </li>
+    <li>
+        Introdução à internet
+    </li>
+    <li>
+        Git
+    </li>
+    <li>
+        Github
+    </li>
+    <li>
+        HTML
+    </li>
+    <li>
+        CSS
+    </li>
+</ol>
 </body>
 </html>
