Altera a posicao daa tag article para antes da tag h2

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
               <li>fhuhfud</li>
           </ul>
         </section>
-            <h2 id="aprendizado"><article>
+        <article>
+            <h2 id="aprendizado">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur facilisis congue augue ac tempus. Nunc pulvinar, nisi tempor semper sollicitudin, est enim sodales ex, et mattis nisi odio in erat. Aliquam malesuada ante vel enim porta accumsan. Cras rutrum eleifend nisl, laoreet faucibus diam laoreet at. Cras rutrum placerat elit, eget pretium risus imperdiet ut. Proin egestas ex at ipsum nulla.
-            </article></h2>
+            </h2>
+        </article>
             <section>
                 <footer id="rodape">PROJETO DESENVOLVIDO EM 24/11/2020 POR LETÍCIA LIMA: <a href="https://github.com/letslima" target="_blank">GITHUB</a> ● <a href="https://www.linkedin.com/in/let%C3%ADcia-lima-1ba33115b/" target="_blank">LINKEDIN</a> ● <a href="https://twitter.com/letlih" target="_blank">TWITTER</a> ● <a href="https://www.instagram.com/letlih/" target="_blank">INSTAGRAM</a> ● <a href="https://www.facebook.com/chubbylima/" target="_blank">FACEBOOK</a></footer>
             </section>
