--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>NodeJS</li>
       </ul>
       <br>
+      <article id="artigo">
+        <p>Iniciei meus estudos na Trybe em 09 de novembro de 2020. Após dois dias de fantásticos “welcome days” onde a Trybe nos foi apresentada por diversos funcionários, inclusive até pelo seu dono, todos muito simpáticos e com enormes sorrisos em suas faces. Estes dois dias foram as nossas boas vindas, e foram muito bons.<br>Desde então, já se passaram três semanas. Três semanas de muito aprendizado, onde passamos por uma introdução bem básica ao Unix até aprendermos HTML e CSS. Um início de jornada muito promissor e que mostra que a jornada será única, produtiva e muito valiosa.</p>
+      </article>
       <nav>
       <a id="link_externo" href="https://www.betrybe.com/" target="_blank">Site da Trybe</a>
       </nav>
