Tentativa 2 de artigo

--- a/index.html
+++ b/index.html
@@ -65,72 +65,22 @@
                     Sobre o meu aprendizado
                 </h2>
                 <p>
-                    Aprendii muita coisa nessas quase três semanas que estou estudando aqui na trybe, muitas delas relacionadas ao conteúdo do curso, mas o que surpreendeu mesmo foi o quanto que estou aprendendo sobre ferramentas que vou usar no dia a dia, as soft-skills.
-                </p>
-                <aside>
-                    <h2 id="breve">"...me ajudaram a melhorar meus relacionamentos."</h2>
-                </aside>
-                <p>
-                    A Introdução do tema Inteligencia Emocional e Empatia me ajudaram a melhorar meus relacionamentos. 
+                    Aprendi muita coisa nessas quase três semanas que estou estudando aqui na trybe, muitas delas relacionadas ao conteúdo do curso, mas o que surpreendeu mesmo foi o quanto que estou aprendendo sobre ferramentas que vou usar no dia a dia, as soft-skills.
+                    A Introdução do tema Inteligencia Emocional e Empatia me ajudaram a melhorar meus relacionamentos.
                 </p>
             </article>
+            <aside>
+                <h2 id="breve">"...me ajudaram a melhorar meus relacionamentos."</h2>
+            </aside>
+            <article>
+                <h2>
+
+                </h2>
+            </article>
         </section>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
-                <p>enchedor de linguiça</p>
+            <table>
+
+            </table>
             </div>
             <div style="clear: both;"></div>
                 <div>
