--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         <li>Aprender em grupo é um grande estímulo para superar a saturação estagnante do auto-aprendizado;</li>
         <li>Na Trybe, o pertencimento a um coletivo é realidade e não apenas <em>marketing</em>.</li>
       </ol>
+      <h2>O que ainda desejo (e vou) aprender</h2>
+      <ul id="licoes_a_aprender">
+        <li>Como explorar o <em>LinkedIn</em> para conseguir mais oportunidades;</li>
+        <li>Explorar um DOM dinâmico com <em>JavaScript</em>;</li>
+        <li>Desenvolver <em>front-ends</em> em <em>React</em> - e entender como utilizar <em>Rest APIs</em>;</li>
+        <li><em>Flexbox</em> sem <em>Bootstrap</em>;</li>
+        <li>Práticas que permitam escrever um CSS responsivo sem penar tanto;</li>
+        <li>Metodologias Ágeis e sua importância no desenvolvimento profissional de <em>software</em>;</li>
+        <li>Tests em <em>front-end</em>, algo que pra mim ainda é difícil de imaginar;</li>
+        <li>A lógica e as vantagens de <em>MongoDB</em> e como utilizá-lo;</li>
+        <li>Se <em>NodeJS</em> supera <em>Python</em> em <em>back-ends</em>;</li>
+        <li>Noções de arquitetura de <em>software</em> para o planejamento e otimização da programação.</li>
+      </ul>
     </main>
   </body>
 </html>
