Atualizando os links de cabeçalho e ajustando as listas.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
 </head>
 <body>
     <header id="cabecalho">
-        <div>
-            <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-            <ul id="linkheader">
-                <li><a href="https://www.linkedin.com/in/jhonatan-arguello/">Linkedin</a></li>
-                <li><a href="https://github.com/jiarguello">GitHub</a></li>
-                <li><a href="https://www.betrybe.com/">Conheça a Trybe</a>
-            </ul>
-            
-        </div>
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/jhonatan-arguello/" target="_blank">Linkedin</a>
+            <a href="https://github.com/jiarguello" target="_blank">GitHub</a>
+            <a href="https://www.betrybe.com/" target="_blank">Conheça a Trybe</a>
+        </nav>
     </header>
 
     <main>
         <section>
-            <img src="minha_foto.png" id="minha_foto">
+            <img src="minha_foto.png" alt="foto do Jhonatan com sua gatinha" id="minha_foto">
 
             <aside>
                 <p>Estudar na Trybe <strong>NÃO É FÁCIL</strong>, mas é muito recompensador. Me lembra muito quando minha mãe vinha com o tal do mertiolate rs.</p>
