--- a/index.html
+++ b/index.html
@@ -102,6 +102,82 @@
           </li>
         </ol>
       </section>
+      <section id="nao-aprendidas">
+          <h2>Lições a Aprender</h2>
+          <ul id="licoes_a_aprender">
+            <li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li><li>
+                Inspect
+                <img
+                  class="icon"
+                  src="assets/inspect.png"
+                  alt="ícone do inspect"
+                />
+              </li>
+          </ul>
+      </section>
     </main>
   </body>
 </html>
