--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>LESSONS LEARNED PROJECT - LETSLIMA</title>
     </head>
     <body>
-      <section id="cabecalho">
+      <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas na <a href="https://app.betrybe.com/course/fundamentals/unix/unix-part-1" target="_blank"><img id="trybe_logo" src="trybe.png" alt="imagem da logotipo da Trybe"></a></h1>
-      </section>
+      </header>
       <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
         <section>
           <ol id="licoes_aprendidas">
