--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
       Lições aprendidas - Trybe!
     </h1>
   </header>
+  <img class="foto-perfil" src="/foto-perfil.jpeg" >
+  <article div="lista-materias">
+    <h1>Lições aprendidas</h1>
+    <div id="licoes_aprendidas">
+      <ol>
+        <li>Empatia</li>
+        <li>Git - comandos</li>
+        <li>Github</li>
+        <li>Versionamento</li>
+        <li>Comandos Bash</li>
+        <li>Shell</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Versionamento</li>
+        <li>Código de ética</li>
+      </ol>
+    </div>
+    <div id="licoes_a_aprender">
+      <ul>
+        <li>Javascript</li>
+        <li>EMC6</li>
+        <li>Javascript performático</li>
+        <li>Arrays</li>
+        <li>Callbacks</li>
+        <li>Shell</li>
+        <li>Javascript - DOM e seletores</li>
+        <li>React Hooks</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+      </ul>
+    </div>
+  </article>
+  <article>
+    <section>
+      <p>
+        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
+      </p>
+      <aside>
+        <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+      </aside>
+      <p>
+        The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.
+      </p>
+      <p>
+        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
+      </p>
+    </section>
+  </article>
 </body>
-<footer id="rodape"></footer>
+<footer id="rodape">
+  <nav><a target="_blank" href="https://www.linkedin.com/in/f%C3%A1bio-ven%C3%A2ncio-de-almeida-393522138/">Linkedin</a></nav>
+</footer>
 </html>
