--- a/index.html
+++ b/index.html
@@ -12,36 +12,28 @@
     </header>
     <img id="minha_foto" src="foto_carol_bitencourt.jpg" alt="Foto da Carol Bitencourt.">
 <ol id="licoes_aprendidas">
-    <li>
-        Autoconhecimento
-    </li>
-    <li>
-        Empatia
-    </li>
-    <li>
-        Inteligência emocional
-    </li>
-    <li>
-        Unix
-    </li>
-    <li>
-        Bash
-    </li>
-    <li>
-        Introdução à internet
-    </li>
-    <li>
-        Git
-    </li>
-    <li>
-        Github
-    </li>
-    <li>
-        HTML
-    </li>
-    <li>
-        CSS
-    </li>
+    <li>Autoconhecimento</li>
+    <li>Empatia</li>
+    <li>Inteligência emocional</li>
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Introdução à internet</li>
+    <li>Git</li>
+    <li>Github</li>
+    <li>HTML</li>
+    <li>CSS</li>
 </ol>
+<ul id="licoes_a_aprender">
+    <li>Comunicação</li>
+    <li>Colaboração</li>
+    <li>Liderança</li>
+    <li>JavaScript</li>
+    <li>DOM</li>
+    <li>React</li>
+    <li>Metodologias ágeis</li>
+    <li>Redux</li>
+    <li>SQL</li>
+    <li>MongoDB</li>
+</ul>
 </body>
 </html>
