--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <header id="cabecalho">
         <h1 id="titulo">Primeiro Projeto | HTML & CSS - Trybe! 🚀</h1>
+        <h3 id="texto_cabecalho">Saiba mais sobre a <a href="https://blog.betrybe.com/" target="_blank" rel="noopener noreferrer">Trybe</a></h3>
     </header>
 
     <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
