add cabecalho e titulo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header id="header"></header>
+        <header id="cabecalho"><h1 id="titulo">titulo</h1></header>
     </body>
 </html>
