ajustes artigo e aside

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
                     <li>SQL</li>
                 </ul>
             </section>
-            
-            <article>
+            <section id="textos">
+                <article>
                     Minha jornada na Trybe começou dia 9 de Novembro de 2020 e de lá pra cá aprendi muito. Muito mesmo! Os conteudos estudados até agora foram fundamentos de desenvolvimento web, como funciona a internet, Unix, Bash, Shell, HTML, CSS e HTML Semântico. Fora todos os conteudos que fazem parte das <em>Hard Skills</em>, também fomos iniciados nos estudos das <em>Soft Skills</em>, aprendendo um pouco sobre inteligência emocional. 
-            </article>
-            <aside>
-                Apesar do pouco tempo de curso, já aprendi um pouco sobre Unix, Bash, Softskills, HTML, CSS e HTML Semântico. Espero nos próximos meses aperfeiçoar os conhecimento que já adquiri e aprender muitos outros!!! #gotrybers
-            </aside>
+                </article>
+                <aside>
+                    Apesar do pouco tempo de curso, já aprendi um pouco sobre Unix, Bash, Softskills, HTML, CSS e HTML Semântico. Espero nos próximos meses aperfeiçoar os conhecimento que já adquiri e aprender muitos outros!!! #gotrybers
+                </aside>
+            </section>
+            
       </main>
       <footer id="rodape">
           <nav>
