--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
         <li>Noções de arquitetura de <em>software</em> para o planejamento e otimização da programação.</li>
       </ul>
     </main>
+    <footer id="rodape">Desenvolvido por Renato Feitosa</footer>
   </body>
 </html>
