vesao final do dia do projeto

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1 id="titulo">Lições aprendidas - trybe</h1>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Contato</li>
+                <li>GitHub</li>
+                <li>LinkedIn</li>
             </ul>
         </nav>
     </header>
