ajustes alt imagens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header id="cabecalho">
           <h1 id="titulo">Lessons Learned</h1>
           <section id="apresentacao">
-            <img src="foto.jpg"  id="minha_foto">
+            <img src="foto.jpg"  id="minha_foto" alt="Foto de Raphael">
             <h2>Raphael Rêgo</h2>
             <p>Estudant at Trybe</p>                        
         </section>
