--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <header id="cabecalho">
+      <div class="logo">
+        <img src="assets/logo.png" alt="" />
+      </div>
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
     </header>
+    <main>
+      <section class="perfil">
+        <img src="assets/profile.png" id="minha_foto" alt="Foto de perfil de Luiz Vicentin">
+      </section>
+      <section></section>
+    </main>
   </body>
 </html>
