Added styling to navigation section, small text adjustment

--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Lessons Learned - Projeto</title>
 </head>
-
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
         <nav id="nav-link">
-            <p>
-                <a href="https://www.linkedin.com/in/ggaldino95/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/GGaldino95" target="_blank">GitHub</a>
-            </p>
+            <a class="link" href="https://www.linkedin.com/in/ggaldino95/" target="_blank"><i id="icon" class="fa fa-linkedin"></i> LinkedIn</a>
+            <a class="link" href="https://github.com/GGaldino95" target="_blank"><i id="icon" class="fa fa-github"></i> GitHub</a>
         </nav>
     </header>
     <main id="conteudo">
@@ -67,7 +66,7 @@
         </section>
         <h2>Trajetória - <em>A New Hope</em></h2>
         <section>
-            <article>
+            <article id="artigo">
                 <p>
                     <span id="sw"><em>Numa galáxia não muito distante...</em></span><br><br>
                     Lá estava eu, começando meus estudos na TRYBE, com um baita aperto no coração
@@ -81,7 +80,7 @@
             </article>
         </section>
         <section>
-            <aside>
+            <aside id="secao">
                 <p>
                     <span class="highlight-word">FUN FACT:</span><br>
                     Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
@@ -97,5 +96,4 @@
             Todos os direitos reservados <span class="highlight-word">©</span>.</em>
     </footer>
 </body>
-
 </html>
