--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 </ul>
             </section>
             <section id="textos">
-                <article>
+                <article class="ladoesquerdo">
                     Minha jornada na Trybe começou dia 9 de Novembro de 2020 e de lá pra cá aprendi muito. Muito mesmo! Os conteudos estudados até agora foram fundamentos de desenvolvimento web, como funciona a internet, Unix, Bash, Shell, HTML, CSS e HTML Semântico. Fora todos os conteudos que fazem parte das <em>Hard Skills</em>, também fomos iniciados nos estudos das <em>Soft Skills</em>, aprendendo um pouco sobre inteligência emocional. 
                 </article>
-                <aside>
+                <aside class="ladodireito">
                     Apesar do pouco tempo de curso, já aprendi um pouco sobre Unix, Bash, Softskills, HTML, CSS e HTML Semântico. Espero nos próximos meses aperfeiçoar os conhecimento que já adquiri e aprender muitos outros!!! #gotrybers
                 </aside>
             </section>
