atualização de section que o corretor não esta lendo

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
              </section>
         </div>
         <div id="aside">
-            <aside class="aside-lateral">
-                <h3>Sobre o que  aprendemos: </h3>
-                <article>
-                    <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
-                </article>
-            </aside>
+            <section>
+                <aside class="aside-lateral">
+                    <h3>Sobre o que  aprendemos: </h3>
+                    <article>
+                        <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
+                    </article>
+                </aside>
+            </section>
         </div>
     </main>
     <footer id="rodape">
